<resources>
    <string name="app_name">flobiz_task</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="add_new">+ Add New</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="back">back</string>
    <string name="record_expense">Record Expense</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="electricity_bill">eg Electricity Bill</string>
    <string name="save">Save</string>
</resources>