<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorSearch"
    tools:context=".view.activity.AddNewTransctionActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/saveButtonLyt"
        >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="16dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/arrow_left"
        android:contentDescription="@string/back" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_expense"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="16dp" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/radio_expense"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:text="@string/expense"
            android:background="@drawable/selected_radio_background"
            android:checked="true"
            android:textSize="16sp"
            android:buttonTint="@color/colorPrimary"
            android:textColor="@color/textColorSecondary" />

        <RadioButton
            android:id="@+id/radio_income"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:text="@string/income"
            android:shadowColor="@color/purple_500"
            android:background="@drawable/radio_item_background"
            android:textSize="16sp"
            android:buttonTint="@color/colorPrimary"
            android:textColor="@color/textColorSecondary"
            android:layout_marginStart="16dp" />
    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">


            <TextView
                android:id="@+id/date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_gravity="start|center_vertical" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*"
                android:textSize="14sp"
                android:textColor="@android:color/holo_red_dark"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="2dp" />
        </LinearLayout>


        <RelativeLayout
            android:id="@+id/dateLyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            >

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:focusable="false"
            android:hint="Select Date"
            android:padding="6dp"
            android:background="@color/white"
        android:textSize="16sp"
        />

            <ImageButton
                android:id="@+id/calenderBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar"
                android:layout_alignParentEnd="true"
                android:background="@color/white"
                android:layout_centerVertical="true"
                />


        </RelativeLayout>




    </LinearLayout>


    <LinearLayout
        android:id="@+id/descLyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:padding="16dp">



            <TextView
                android:id="@+id/desc_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Description"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"
                android:textColor="#000000"
                android:layout_gravity="start|center_vertical" />






        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            >

            <EditText
                android:id="@+id/descEdtTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/electricity_bill"
                android:background="@color/white"
                android:textSize="16sp"
                />
        </RelativeLayout>








    </LinearLayout>


    <LinearLayout
        android:id="@+id/totalAmountLyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Total Amount"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_gravity="start|center_vertical" />
            <TextView
                android:id="@+id/totalAmountTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="₹ "
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_toStartOf="@id/amountEdtTxt"
                android:textColor="#000000"
                android:layout_centerVertical="true"
                 />

            <EditText
                android:id="@+id/amountEdtTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Enter amount"
                android:textColorHint="@color/textColorSecondary"
                android:inputType="numberDecimal"
                android:textSize="18sp"
                android:backgroundTint="@color/black"
                android:outlineSpotShadowColor="@color/black"
                android:layout_alignParentEnd="true"
                />

        </RelativeLayout>





    </LinearLayout>


    </LinearLayout>

<RelativeLayout
    android:id="@+id/saveButtonLyt"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@color/white" >

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        android:padding="6dp"
        android:textAllCaps="false"
        android:text="@string/save" />
</RelativeLayout>


</RelativeLayout>



