<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorSearch"
    tools:context=".view.ExpenseDetailActivity">




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/back_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/back"
                android:src="@drawable/arrow_left" />

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/back_icon"
                android:text="@string/expense"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/editBtn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_toStartOf="@+id/deleteBtn"
                android:background="@color/white"
                android:contentDescription="@string/back"
                android:src="@drawable/edit" />


            <ImageButton
                android:id="@+id/deleteBtn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:background="@color/white"
                android:contentDescription="@string/back"
                android:src="@drawable/delete" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="15dp">




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/expenseTypeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:text="Expense"
                    android:textColor="@color/colorSecondary"
                    android:textSize="14sp" />



                <TextView
                    android:id="@+id/expenseIdTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:textColor="@color/colorSecondary"
                    android:textSize="14sp" />


            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/dateEdtTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:enabled="false"
                    android:focusable="false"
                    android:textColorHint="@color/textColorPrimary"
                    android:textColor="@color/black"
                    android:focusableInTouchMode="false"
                    android:text="02 Dec 2020"
                    android:textSize="15sp" />

                <ImageButton
                    android:id="@+id/calendarBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@color/white"
                    android:src="@drawable/calendar"
                    android:visibility="gone" />

            </RelativeLayout>

            <!--            <EditText-->
            <!--                android:id="@+id/descEdtTxt"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:inputType="none"-->
            <!--                android:focusable="false"-->
            <!--                android:text="Electricity Bill"-->
            <!--                android:background="@color/white"-->
            <!--                android:textSize="16sp"-->
            <!--                />-->


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:text="Description"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/descEdtTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textColorHint="@color/textColorPrimary"
                android:textColor="@color/textColorPrimary"
                android:enabled="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="Electricity Bill"
                android:textSize="15sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="start|center_vertical"
                    android:text="Total Amount"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/totalAmountTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/amountEdtTxt"
                    android:text="₹ "
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/amountEdtTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@color/white"
                    android:enabled="false"
                    android:focusable="false"
                    android:textColorHint="@color/textColorPrimary"
                    android:textColor="@color/textColorPrimary"
                    android:focusableInTouchMode="false"
                    android:hint="10000.0"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>


        </LinearLayout>
    <Button
        android:id="@+id/saveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="33dp"
        android:visibility="gone"
        android:text="@string/save"
        />



</LinearLayout>



